--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -46,11 +46,11 @@ function add() {
 }
 
 function getCsrfToken() {
-	  const cookies = document.cookie.split(';').map(c => c.trim().split('=')).filter(c => c[0] == 'CSRF-Token');
-	  if (cookies.length > 0) {
-				return cookies[0][1];
-	  }
-	  return null;
+    const cookies = document.cookie.split(';').filter(c => c.startsWith('CSRF-Token='));
+    if (cookies.length > 0) {
+        return cookies[0].substring(11);
+    }
+    return null;
 }
 </script>
 </body>
